Dark Mode UI fixes

--- a/source/app/static/assets/css/dark-theme.css
+++ b/source/app/static/assets/css/dark-theme.css
@@ -732,7 +732,7 @@ body .modal-header .justify-right button {
 .sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] p,
 .sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] i,
 .sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] .caret {
-    color: #1a2035 !important;
+    color: #351a1a !important;
 }
 
 .sidebar .scrollbar-inner>.scroll-element .scroll-bar {
@@ -782,7 +782,7 @@ body label,
 .sidebar.sidebar-style-2 .nav .nav-item.active>a:focus,
 .sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] {
     background: rgba(185, 185, 185, 0.18) !important;
-    color: #1f283e !important;
+    color: #ff0000 !important;
 }
 
 .sidebar.sidebar-style-2 .nav .nav-item.active>a p,
@@ -1001,4 +1001,64 @@ table.dataTable.order-column.stripe tbody>tr.odd.selected>.sorting_1 {
 
 .timeline-t>.timeline-child>.timeline-odd-t {
     background-color: #353535;
+}
+
+.chart-container {
+  margin: 0 -1rem;
+}
+
+.chart-container .card {
+  background: rgba(26, 26, 26, 0.8);
+  border: 1px solid #2a2a2a;
+  height: 280px;
+  margin-bottom: 0;
+  width: 100%;
+}
+
+.chart-container .card.is-loading {
+  opacity: 0.7;
+  pointer-events: none;
+}
+
+.chart-container .card.is-loading:after {
+  content: "Loading...";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+}
+
+.charts-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0.25rem;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.chart-item {
+  min-width: 0;
+}
+
+.chart-inner {
+  position: relative;
+  height: 100%;
+}
+
+.chart-title {
+  color: #fff;
+  font-size: 1rem;
+  padding: 0.5rem;
+}
+
+.card-body-chart {
+  padding: 0.5rem;
+  background-color:#211e28;
+  margin-bottom: 1rem;
+  border-radius: 10px;
+}
+
+:root {
+  --chartBg: #211e28;
 }
